fix: remove scrollbar

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -59,10 +59,9 @@
   -ms-overflow-style: none;
 }
 
-.homepg-weatherfc ul::-webkit-scrollbar {
+.webkit-w::-webkit-scrollbar {
   display: none;
 }
-
 
 .homepg-heroforecast {
   display: flex;
